testdata/invalid/invalid_map_keys_2.bop
struct Wrong {
    map[unknowntype, string] fred;
}